# TermTicket

./: CMakeLists.txt  ISSUES  README.md  TODO
sql/: CreateCommentsTable.sql  CreateDatabase.sql  ResetDatabase.sql  SetupDatabase.sql  SetupTermTixDatabase.sql
src/: Client.cpp  Client.h  Connection.h  DatabaseConnection.cpp  DatabaseConnection.h  OldClient.cpp  OldClient.h  Ticket.h  TicketManager.cpp  TicketManager.h  User.h  main.cpp
src/client/: Client.cpp  Client.h
src/server/: Server.cpp  Server.h
src/server/db/: AuthenticationManager.cpp  AuthenticationManager.h  DatabaseConnection.cpp  DatabaseConnection.h  QueryManager.cpp  QueryManager.h  TicketManager.cpp  TicketManager.h  UserManager.cpp  UserManager.h
src/server/db/sql/: CreateTicketsTable.sql  DropTables.sql
